tests/NormalTests/paczka1/small_fuzzy/58829413.err
Error in line 2: S387 A423 88,0
Error in line 5: upgH2b S387 47,0
Error in line 12: 4I A423 56,2
Error in line 9: upgH2b A155 1,1
